cks/scripts/server_secure/01-server-secure-sc-pod-id.yaml
apiVersion: v1
kind: Pod
metadata:
  name: sc-pod-id-1
spec:
  securityContext:
    runAsUser: 2000
    runAsGroup: 2000
  containers:
  - name: busybox
    image: harbor.kubemsb.com/library/busybox:1.28
    command: ["sh", "-c", "sleep 6000"]
