cks/scripts/server_secure/02-server-secure-sc-container-id.yaml
apiVersion: v1
kind: Pod
metadata:
  name: sc-container-id
spec:
  containers:
  - name: busybox
    image: harbor.kubemsb.com/library/busybox:1.28
    command: ["sh", "-c", "sleep 6000"]
    securityContext:
      runAsUser: 1000  # user和group不一样要存在，不存在也可以运行
      runAsGroup: 1000
