cks/scripts/server_secure/04-server-secure-sc-run-as-nonroot.yaml
apiVersion: v1
kind: Pod
metadata:
  name: sc-pod-runasnonroot
spec:
  containers:
  - name: busybox
    image: harbor.kubemsb.com/library/busybox:1.28
    command: ["sh", "-c", "sleep 6000"]
    securityContext:
      runAsNonRoot: true
