cks/scripts/server_secure/05-server-secure-sc-pod-privileged.yaml
apiVersion: v1
kind: Pod
metadata:
  name: sc-pod-privileged
spec:
  containers:
  - name: busybox
    image: harbor.kubemsb.com/library/busybox:1.28
    command: ["sh", "-c", "sleep 6000"]
    securityContext:
      privileged: true
