cks/scripts/server_secure/07-server-secure-sc-nonsecure-sysctl-2.yaml
apiVersion: v1
kind: Pod
metadata:
  name: sc-pod-nonsecure-sysctls-2
spec:
  nodeName: worker1
  securityContext:
    sysctls:
    - name: "net.core.somaxconn"
      value: "5555"
  containers:
  - name: busybox
    image: harbor.kubemsb.com/library/busybox:1.28
    command: ["sh", "-c", "sleep 6000"]
