cks/scripts/server_secure/11-server-secure-gatekeeper-forbidden-privileged-pod-test.yaml
apiVersion: v1
kind: Pod
metadata:
  name: gatekeeper-forbidden-privileged-pod-test
spec:
  containers:
  - name: c1
    image: harbor.kubemsb.com/library/nginx-web:0.1
  - name: c2
    image: harbor.kubemsb.com/library/busybox:1.28
    command: ["sh", "-c", "sleep 60000"]
    securityContext:
      privileged: true
