cks/scripts/server_secure/17-server-secure-seccomp-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: seccomp-pod
spec:
  nodeName: worker1
  containers:
  - name: busybox-normal
    image: harbor.kubemsb.com/library/busybox:1.28
    command:
    - sh
    - -c
    - sleep 6000
  - name: busybox-seccomp
    image: harbor.kubemsb.com/library/busybox:1.28
    command:
    - sh
    - -c
    - sleep 6000
    securityContext:
      seccompProfile:
        type: Localhost
        localhostProfile: deny-user-options.json
