cks/scripts/server_secure/19-server-secure-runsc-gvisor-runtimeclass-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: runsc-gvisor-runtimeclass-pod
spec:
  runtimeClassName: gvisor-rt
  containers:
  - name: nginx
    image: harbor.kubemsb.com/library/nginx-web:0.1
